completed all the users apis and added jwt token

--- a/Backend/config/.env
+++ b/Backend/config/.env
@@ -5,3 +5,13 @@ DB_URL = "mongodb://localhost:27017/mernEcommerce"
 JWT_SECRET = 495834t59WSFJ#@%e$%&$fd
 
 JWT_EXPIRE = 6d
+
+SMPT_SERVICE = gmail
+
+SMPT_HOST = smtp.gmail.com
+
+SMPT_PORT = 465
+
+SMPT_PASSWORD = 
+
+SMPT_MAIL = activex1357@gmail.com
